--- a/.env
+++ b/.env
@@ -1,12 +1,14 @@
-#development,staging,production
+#Node environment. Can be development, staging, production
 NODE_ENV=development
 
 #Server port
 PORT=3000
 
-##Database
+## Database ##
+##############
 DB_HOST=pg-db
-DB_USER=postgres
-DB_PASS=postgrespass
+DB_USER=admin
+DB_PASS=admin
 DB_PORT=5434
 DB_NAME=postgres
+DATABASE_URL="postgresql://admin:admin@localhost:5434/postgres?schema=api"
