--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,12 @@ NODE_ENV=development
 
 #Server port
 PORT=3000
+
+## Database ##
+##############
+DB_HOST=pg-db
+DB_USER=admin
+DB_PASS=admin
+DB_PORT=5434
+DB_NAME=postgres
+DATABASE_URL="postgresql://admin:admin@localhost:5434/postgres?schema=api"
