--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "nodemon": "^3.1.0",
+    "prisma": "^5.13.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
