--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 NODE_ENV=development
 
 #Server port
-PORT=3000
+PORT=3005
 
 ## Database ##
 ##############
@@ -12,3 +12,5 @@ DB_PASS=admin
 DB_PORT=5434
 DB_NAME=postgres
 DATABASE_URL="postgresql://admin:admin@localhost:5434/postgres?schema=api"
+
+HASH_SECRET="something-very-secret"
