--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "packageManager": "yarn@4.1.1",
   "scripts": {
     "build": "tsc",
-    "start:development": "yarn && NODE_ENV=development && nodemon src/index.ts",
-    "start:staging": "yarn && yarn build && NODE_ENV=staging && node .build/dist/src/index.js",
-    "start:production": "yarn && yarn build && NODE_ENV=production && node .build/dist/src/index.js"
+    "start:development": "NODE_ENV=development && nodemon src/index.ts",
+    "start:staging": "yarn build && NODE_ENV=staging && node .build/dist/src/index.js",
+    "start:production": "yarn build && NODE_ENV=production && node .build/dist/src/index.js"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/joi": "^17.2.3",
     "@types/node": "^20.12.7",
     "nodemon": "^3.1.0",
     "prisma": "^5.13.0",
@@ -16,7 +18,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "joi": "^17.13.0"
   }
 }
