feat: Add login handler Utilizes JWT for user session as well as user authorization

--- a/.env
+++ b/.env
@@ -13,4 +13,8 @@ DB_PORT=5434
 DB_NAME=postgres
 DATABASE_URL="postgresql://admin:admin@localhost:5434/postgres?schema=api"
 
-HASH_SECRET="something-very-secret"
+
+ACCESS_TOKEN_SECRET='something-very-secret'
+ACCESS_TOKEN_EXPIRATION='1d'
+REFRESH_TOKEN_SECRET='something-very-secret'
+REFRESH_TOKEN_EXPIRATION='1d'
