--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
     "nodemon": "^3.1.0",
     "prisma": "^5.13.0",
@@ -21,6 +22,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "joi": "^17.13.0"
+    "joi": "^17.13.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
