--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "tsc",
     "start:development": "NODE_ENV=development && nodemon src/index.ts",
     "start:staging": "yarn build && NODE_ENV=staging && node .build/dist/src/index.js",
-    "start:production": "yarn build && NODE_ENV=production && node .build/dist/src/index.js"
+    "start:production": "yarn build && NODE_ENV=production && node .build/dist/src/index.js",
+    "seed": "ts-node ./prisma/seed/index.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -18,10 +19,12 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fishery": "^2.2.2",
     "joi": "^17.13.0",
     "jsonwebtoken": "^9.0.2"
   }
